--- a/Frontend/angular.json
+++ b/Frontend/angular.json
@@ -33,7 +33,8 @@
             "styles": [
               "src/custom-theme.scss",
               "src/styles.css",
-              "node_modules/@ctrl/ngx-emoji-mart/picker.css"
+              "node_modules/@ctrl/ngx-emoji-mart/picker.css",
+              "node_modules/animate.css/animate.min.css"
             ],
             "scripts": []
           },
