--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -24,6 +24,7 @@
     "@ctrl/ngx-emoji-mart": "^6.2.0",
     "animate.css": "^4.1.1",
     "ngx-cookie-service": "^13.1.2",
+    "ngx-dropzone": "^3.1.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
