--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "@ctrl/ngx-emoji-mart": "^6.2.0",
+    "fast-json-patch": "^3.1.1",
     "ngx-cookie-service": "^13.1.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
