--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~13.3.0",
     "@angular/compiler": "~13.3.0",
     "@angular/core": "~13.3.0",
+    "@angular/fire": "^7.3.0",
     "@angular/forms": "~13.3.0",
     "@angular/material": "^13.3.2",
     "@angular/platform-browser": "~13.3.0",
@@ -23,7 +24,9 @@
     "@angular/router": "~13.3.0",
     "@ctrl/ngx-emoji-mart": "^6.2.0",
     "animate.css": "^4.1.1",
+    "firebase": "^9.6.11",
     "mapbox-gl": "^2.8.1",
+    "moment": "^2.29.3",
     "ngx-cookie-service": "^13.1.2",
     "ngx-dropzone": "^3.1.0",
     "rxjs": "~7.5.0",
